fix: socket connect issue

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" /> -->
 
 <style>:root{--text-selection-color: rgba(2, 154, 232, .25);--primary: #0172ad;--primary-background: #0172ad;--primary-underline: rgba(1, 114, 173, .5);--primary-hover: #015887;--primary-hover-background: #02659a;--primary-focus: rgba(2, 154, 232, 1);--primary-inverse: #fff;--white: #fff;--grey: #666;--grey-dark: #404040;--grey-darkest: #272727;--grey-light: #c4c8c7;--grey-lightest: #eef1f2;--danger: #cd1717;--border-color: #dadce0;--bg-hover: #eef1f2}body{min-width:100px;min-height:100%;font-family:Roboto,sans-serif;font-size:15px;color:#666;padding:60px 24px 0;height:100%;background-color:#f6f8fb}@media (max-width: 767px){body{padding:60px 16px}}*{margin:0;padding:0}*,:before,:after{box-sizing:border-box}
-</style><link rel="stylesheet" href="styles-74BXGQFX.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-74BXGQFX.css"></noscript><link rel="modulepreload" href="chunk-WDXX5FDA.js"><link rel="modulepreload" href="chunk-KZEZHTV3.js"><link rel="modulepreload" href="chunk-TMRUMUQV.js"><link rel="modulepreload" href="chunk-JMZ7DUBM.js"></head>
+</style><link rel="stylesheet" href="styles-74BXGQFX.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-74BXGQFX.css"></noscript><link rel="modulepreload" href="chunk-Q6P6KOMJ.js"><link rel="modulepreload" href="chunk-KZEZHTV3.js"><link rel="modulepreload" href="chunk-TMRUMUQV.js"><link rel="modulepreload" href="chunk-JMZ7DUBM.js"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-ZGDOARJC.js" type="module"></script></body>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-WYQB3YBW.js" type="module"></script></body>
 </html>
